Adding preview comments to APIs, enabling preview for records